
Change Log
-----------

Not yet released:

  - Removed usage of ereg() function, which no longer exists in PHP 6.
  - BUGFIX: Fixed issue parsing the HTTP_ACCEPT_LANGUAGE header which resulted in the
    country part being ignored (so for example, 'en-US' would be stripped to just 'en'.)

Version 1.4:

  - PHP-Mesh now supports multi-language decorators.  A decorator called "default" will
    result in a lookup for "default.zh-CN.php" if the language is set to zh-CN.  Fallback
    is as always, to "default.php".
  - When running outside of Apache, we now also look at SCRIPT_FILENAME to find out where
    the script is running from, which fixes finding .phpmeshrc on some less friendly web
    hosting setups.
  - BUGFIX: Fixed issue where it would only find the first property.
  - BUGFIX: Fixed formatter output for http-equiv, which would previously print "name="
    instead of "http-equiv=".
  - BUGFIX: Fixed a regex error which was causing problems for running on Windows systems.
  - BUGFIX: Fixed assignment bug which prevented default values working correctly (thanks to
    Dimitri De Franciscis)

Version 1.3:

  - PHP-Mesh no longer requires .phpmeshrc to exist in the document root.  It will search the
    current directory, then the parent, all the way up to the document root.  This is done using
    the Apache functions so it will handle aliased directories as well.

  - The example now works so that the user should only have to copy the example into the web
    server and modify its .htaccess file.

Version 1.2.2:

  - BUGFIX: Fixed incorrect name for $property_name which was making the get_property
    function not work as expected (thanks to a couple of my users for spotting that one.)

Version 1.2.1:

  - BUGFIX: Fix problems with detecting absolute paths on Windows by using the new function
    resolve_path, rather than relying on POSIX conventions.

  - Added utils.php, with some common utilities which I'll need to make things more portable.